# goit-web-hw-13

./: README.md  pyproject.toml  references.md  setup.md
part_1/: docker-compose.yml  main.py
part_1/migrations/: env.py
part_1/migrations/versions/: 480a65f62d21_init.py  f1559d02eb3e_init.py  f4f5d64b1aba_init.py
part_1/postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
part_1/postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16389  16392  16394  16400  16401  16405  16422  16423  16428  16430  16431  16434  16436  16438  16439  16442  16444  16448  (+92 more)
part_1/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
part_1/postgres-data/pg_stat/: pgstat.stat
part_1/postman/: GOIT home-work 12 - postman_collection.json
part_1/src/configuration/: config (old).py  config.env  config.py
part_1/src/database/: db.py  models.py
part_1/src/repository/: contacts.py  users.py
part_1/src/routes/: auth.py  contact.py  users.py
part_1/src/schemas/: schemas.py
part_1/src/services/: auth.py  email.py
part_2/app_quote/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
part_2/app_quote/migrations/: 0001_initial.py  0002_quote_user_author_alter_quote_author.py  0003_alter_author_description_and_more.py
part_2/app_quote/scrap_data/: db.py  db_model.py  scrap.py
part_2/app_quote/static/: style.css
part_2/configuration/: config.env  settings.py
part_2/quotes/: settings.py  urls.py
part_2/users/: forms.py  models.py  signals.py  urls.py  views.py
part_2/users/migrations/: 0001_initial.py
(+22 files in other folders)
